--- a/mediway.gooseberry.media/about.html
+++ b/mediway.gooseberry.media/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Company-HTML Bootstrap theme</title>
+    <title>MediWay</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -32,18 +32,16 @@
 							<span class="icon-bar"></span>
 						</button>
 						<div class="navbar-brand">
-							<a href="index.html"><h1><span>Com</span>pany</h1></a>
+							<a href="index.html"><h1><span>Medi</span>Way</h1></a>
 						</div>
 					</div>
 					
 					<div class="navbar-collapse collapse">							
 						<div class="menu">
 							<ul class="nav nav-tabs" role="tablist">
-								<li role="presentation"><a href="index.html">Home</a></li>
-								<li role="presentation"><a href="about.html" class="active">About Us</a></li>
-								<li role="presentation"><a href="services.html">Services</a></li>								
-								<li role="presentation"><a href="portfolio.html">Portfolio</a></li>
-								<li role="presentation"><a href="blog.html">Blog</a></li>
+								<li role="presentation"><a href="index.html">Home</a></li>					<li role="presentation"><a href="portfolio.html">Hospitals</a></li>
+								<li role="presentation"><a href="services.html">Services</a></li>
+								<li role="presentation"><a href="about.html" class="active">About Us</a></l>
 								<li role="presentation"><a href="contact.html">Contact</a></li>						
 							</ul>
 						</div>
@@ -64,83 +62,81 @@
 	
 	<div class="aboutus">
 		<div class="container">
-			<h3>Our company information</h3>
+			<h3>About Us</h3>
 			<hr>
 			<div class="col-md-7 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-				<img src="images/7.jpg" class="img-responsive">
-				<h4>We Create, Design and Make it Real</h4>
-				<p>Nam tempor velit sed turpis imperdiet vestibulum. In mattis leo ut sapien euismod id feugiat mauris euismod. 
-				Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
-				Phasellus id nulla risus, vel tincidunt turpis. Aliquam a nulla mi, placerat blandit eros. </p>
-				<p>In neque lectus, lobortis a varius a, hendrerit eget dolor. Fusce scelerisque, sem ut viverra sollicitudin, est turpis blandit lacus,
-				in pretium lectus sapien at est. 
-				Integer pretium ipsum sit amet dui feugiat vitae dapibus odio eleifend.</p>
-			</div>
-			<div class="col-md-5 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-				<div class="skill">
-					<h2>Our Skills</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<img src="images/why.jpg" class="img-responsive">
+				<h4>Because We Care About You! </h4>
+				<p>Patients first: We put the patient first in all we do. No matter where in the hospital we work, we remember always that caring for patients and their families is at the heart of our mission and our philosophy.
 
-					<div class="progress-wrap">
-						<h3>Graphic Design</h3>
-						<div class="progress">
-						  <div class="progress-bar  color1" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 85%">
-							<span class="bar-width">85%</span>
-						  </div>
+				Integrity: We adhere to an uncompromising code of ethics that emphasizes honesty, transparency and sincerity. Through our words and actions, we earn the trust of our patients and their families, our community and our coworkers. We seek to do the right thing, always and everywhere, in our day-to-day work and lives.
 
-						</div>
-					</div>
+				Excellence: We continuously strive for excellence. We never stop learning and working to improve our skills, programs and services.
 
-					<div class="progress-wrap">
-						<h4>HTML</h4>
-						<div class="progress">
-						  <div class="progress-bar color2" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 95%">
-						   <span class="bar-width">95%</span>
-						  </div>
-						</div>
-					</div>
-
-					<div class="progress-wrap">
-						<h4>CSS</h4>
-						<div class="progress">
-						  <div class="progress-bar color3" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-							<span class="bar-width">80%</span>
-						  </div>
-						</div>
-					</div>
-
-					<div class="progress-wrap">
-						<h4>Wordpress</h4>
-						<div class="progress">
-						  <div class="progress-bar color4" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
-							<span class="bar-width">90%</span>
-						  </div>
-						</div>
-					</div>
-				</div>				
+				Teamwork: We can achieve our mission and goals only by working together. Through the collective and coordinated efforts of our staff, we apply our diverse talents, backgrounds, ideas and experiences to create solutions and benefit patients. We value team success over individual success.</p>
+				<p>MediWay is dedicated to providing the most advanced healthcare to the communities and patients we serve.
+				We are bonded in an essential academic and service relationship with our hospitals.
+				We are a diverse group of people, joined together by a shared set of values.
+				We put the patients first in all we do.
+				</p>
 			</div>
 		</div>
 	</div>
-	
 	<div class="our-team">
 		<div class="container">
 			<h3>Our Team</h3>	
 			<div class="text-center">
 				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-					<img src="images/services/1.jpg" alt="" >
+					<img src="images/services/nikky.jpg" alt="" >
 					<h4>John Doe</h4>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing eil sed deiusmod tempor</p>
 				</div>
 				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-					<img src="images/services/2.jpg" alt="" >
+					<img src="images/services/vysh.jpg" alt="" >
 					<h4>John Doe</h4>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing eil sed deiusmod tempor</p>
 				</div>
 				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
-					<img src="images/services/3.jpg" alt="" >
+					<img src="images/services/prince.jpg" alt="" >
 					<h4>John Doe</h4>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing eil sed deiusmod tempor</p>
 				</div>
+				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+					<img src="images/services/rosh.jpg" alt="" >
+					<h4>John Doe</h4>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing eil sed deiusmod tempor</p>
+				</div>
+				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+					<img src="images/services/gok.jpg" alt="" >
+					<h4>John Doe</h4>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing eil sed deiusmod tempor</p>
+				</div>
+				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
+					<img src="images/services/alee.jpg" alt="" >
+					<h4>John Doe</h4>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing eil sed deiusmod tempor</p>
+				</div>
+				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+					<img src="images/services/pp.jpg" alt="" >
+					<h4>John Doe</h4>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing eil sed deiusmod tempor</p>
+				</div>
+				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+					<img src="images/services/thush.jpg" alt="" >
+					<h4>John Doe</h4>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing eil sed deiusmod tempor</p>
+				</div>
+				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
+					<img src="images/services/rithi.jpg" alt="" >
+					<h4>John Doe</h4>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing eil sed deiusmod tempor</p>
+				</div>
+				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+					<img src="images/services/srk.jpg" alt="" >
+					<h4>John Doe</h4>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing eil sed deiusmod tempor</p>
+				</div>
+
 			</div>
 		</div>
 	</div>
