--- a/mediway.gooseberry.media/services.html
+++ b/mediway.gooseberry.media/services.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Company-HTML Bootstrap theme</title>
+    <title>MediWay</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
 							<span class="icon-bar"></span>
 						</button>
 						<div class="navbar-brand">
-							<a href="index.html"><h1><span>Com</span>pany</h1></a>
+							<a href="index.html"><h1><span>Medi</span>Way</h1></a>
 						</div>
 					</div>
 					
@@ -40,10 +40,9 @@
 						<div class="menu">
 							<ul class="nav nav-tabs" role="tablist">
 								<li role="presentation"><a href="index.html">Home</a></li>
-								<li role="presentation"><a href="about.html">About Us</a></li>
+								<li role="presentation"><a href="hospitals.html">Hospitals</a></li>
 								<li role="presentation"><a href="services.html" class="active">Services</a></li>								
-								<li role="presentation"><a href="portfolio.html">Portfolio</a></li>
-								<li role="presentation"><a href="blog.html">Blog</a></li>
+								<li role="presentation"><a href="about.html">About Us</a></li>
 								<li role="presentation"><a href="contact.html">Contact</a></li>						
 							</ul>
 						</div>
@@ -64,7 +63,7 @@
 	
 	<div class="services">
 		<div class="container">
-			<h3>Company Services</h3>
+			<h3>MidWay Services</h3>
 			<hr>
 			<div class="col-md-6">
 				<img src="images/4.jpg" class="img-responsive">
