--- a/mediway.gooseberry.media/contact.html
+++ b/mediway.gooseberry.media/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Company-HTML Bootstrap theme</title>
+    <title>MediWay</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
 							<span class="icon-bar"></span>
 						</button>
 						<div class="navbar-brand">
-							<a href="index.html"><h1><span>Com</span>pany</h1></a>
+							<a href="index.html"><h1><span>Medi</span>Way</h1></a>
 						</div>
 					</div>
 					
@@ -40,10 +40,9 @@
 						<div class="menu">
 							<ul class="nav nav-tabs" role="tablist">
 								<li role="presentation"><a href="index.html">Home</a></li>
+								<li role="presentation"><a href="hospital.html">Hospitals</a></li>
+								<li role="presentation"><a href="services.html">Services</a></li>
 								<li role="presentation"><a href="about.html">About Us</a></li>
-								<li role="presentation"><a href="services.html">Services</a></li>								
-								<li role="presentation"><a href="portfolio.html">Portfolio</a></li>
-								<li role="presentation"><a href="blog.html">Blog</a></li>
 								<li role="presentation"><a href="contact.html" class="active">Contact</a></li>						
 							</ul>
 						</div>
@@ -61,17 +60,11 @@
 			</div>		
 		</div>	
 	</div>
-	
-	<div class="map">
-		<iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Kuningan,+Jakarta+Capital+Region,+Indonesia&amp;aq=3&amp;oq=kuningan+&amp;sll=37.0625,-95.677068&amp;sspn=37.410045,86.572266&amp;ie=UTF8&amp;hq=&amp;hnear=Kuningan&amp;t=m&amp;z=14&amp;ll=-6.238824,106.830177&amp;output=embed">
-		</iframe>
-	</div>
-	
 	<section id="contact-page">
         <div class="container">
             <div class="center">        
                 <h2>Drop Your Message</h2>
-                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>If you have any querries be free to ask with us</p>
             </div> 
             <div class="row contact-wrap"> 
                 <div class="status alert alert-success" style="display: none"></div>
@@ -90,7 +83,7 @@
                             <input type="number" class="form-control">
                         </div>
                         <div class="form-group">
-                            <label>Company Name</label>
+                            <label>Disease</label>
                             <input type="text" class="form-control">
                         </div>                        
                     </div>
@@ -129,7 +122,7 @@
 				
 				<div class="col-md-4 col-md-offset-4">
 					<div class="copyright">
-						&copy; June  2015 by <a target="_blank" href="http://bootstraptaste.com/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">Bootstrap Themes</a>. All Rights Reserved.
+						&copy; June  2015 by <a target="_blank" href="http://bootstraptaste.com/" title="MediWay">MediWay</a>. All Rights Reserved.
 					</div>
                     <!-- 
                         All links in the footer should remain intact. 
